Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/typevars/6968793/T6968793.out
T6968793.java:10:14: compiler.err.not.within.bounds: java.lang.Object, X
T6968793.java:10:22: compiler.err.not.within.bounds: java.lang.Object, Y
T6968793.java:10:30: compiler.err.not.within.bounds: java.lang.Object, Z
3 errors
